# AlloyEngine

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
benchmarks/: CMakeLists.txt  benchmark_ecs.cpp  benchmark_vector.cpp
data/shaders/: lights.frag
engine/common/: CMakeLists.txt
engine/common/debug/include/: log.h  profiler.h
engine/common/job_system/include/: job.h  job_system.h
engine/common/mathematics/include/: matrix22.h  random.h  vector.h
engine/common/mathematics/src/: vector.cpp
engine/common/patterns/include/: service_locator.h
engine/common/times/include/: chronometer.h
engine/common/times/src/: chronometer.cpp
engine/common/utils/include/: color.h
engine/common/utils/src/: color.cpp
engine/core/: CMakeLists.txt
engine/core/ecs/include/: component.h  entity.h  entity_handle.h  entity_manager.h  position_component_manager.h  system.h
engine/core/ecs/include/components/: component.h  interface_component_manager.h  light_component_manager.h  position_component_manager.h  renderer_2d_component_manager.h  sprite_component_manager.h
engine/core/ecs/include/systems/: light_system.h  renderer_2d_system.h  system.h
engine/core/ecs/src/: entity.cpp  entity_handle.cpp  entity_manager.cpp
engine/core/ecs/src/systems/: light_system.cpp  renderer_2d_system.cpp  system.cpp
engine/core/engine/include/: application.h  engine.h  log.h
engine/core/engine/src/: application.cpp  engine.cpp
engine/modules/: CMakeLists.txt
engine/modules/graphics/include/: glsl_extension.h  graphics_engine.h  light_manager.h  sfml_graphics_extension.h  texture.h  tile.h  tilemap.h  tilemap_manager.h  window.h
engine/modules/graphics/include/interfaces/: interface_drawable.h
engine/modules/graphics/include/lights/: light_manager.h  light_types.h
engine/modules/graphics/include/primitives/: circle.h  polygon.h  primitive.h  primitve_manager.h  rect.h
engine/modules/graphics/include/renderer_2d/: drawing_instruction_2d.h  renderer_2d.h
engine/modules/graphics/src/: graphics_engine.cpp  texture.cpp  tilemap.cpp  tilemap_manager.cpp
engine/modules/graphics/src/lights/: light_manager.cpp  light_types.cpp
engine/modules/graphics/src/primitives/: circle.cpp  polygon.cpp  primitive.cpp  rect.cpp
engine/modules/graphics/src/renderer_2d/: renderer_2d.cpp
engine/modules/graphics3D/include/devices/: window.h
engine/modules/graphics3D/src/devices/: window.cpp
engine/modules/inputs/include/: input_manager.h
engine/modules/inputs/src/: input_manager.cpp
engine/modules/physics/include/: contact_solver.h
engine/modules/physics/src/: contact_solver.cpp
engine/wrappers/: CMakeLists.txt
engine/wrappers/sdl/include/: sdl_window.h  window.h
engine/wrappers/sdl/src/: sdl_window.cpp  window.cpp
engine/wrappers/vulkan/include/devices/: instance.h  logical_device.h  physical_device.h  surface.h  vulkan_window.h
engine/wrappers/vulkan/src/devices/: instance.cpp  logical_device.cpp  physical_device.cpp  surface.cpp
projects/: CMakeLists.txt
projects/Planets/: main.cpp
projects/Planets/include/: planets_application.h  planets_system.h
projects/Planets/src/: planets_application.cpp  planets_system.cpp
projects/WaterSimulation/: main.cpp
projects/WaterSimulation/include/: water_application.h  water_simulation.h  water_simulation_system.h
projects/WaterSimulation/src/: water_application.cpp  water_simulation_system.cpp
test/: CMakeLists.txt  test_ecs.cpp  test_job_system.cpp  test_math.cpp
